finished auth flow

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 PORT = 5000
+CLIENT_DEV_ID = 217806950072-s7cb2pucargsmokf3jb00uqcchh7fb5m.apps.googleusercontent.com
+CLIENT_DEV_SECRET = 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
+CALL_BACK_URL = /auth/google/callback
+MONGO_DEV_URI = mongodb+srv://seelavijayan:QR51m0nmzsgvL8lL@cluster0.shy1b08.mongodb.net/emaily-dev?retryWrites=true&w=majority
+COOKIE_KEY = qwertyuiopasdfghjklzxcvbnm
+GOOGLE_PROD_ID = 813839914875-rcpdus3s4vc7ml2lcfmn6i8c4v8m46ub.apps.googleusercontent.com
+GOOGLE_PROD_SECRET = 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
+MONGO_PROD_URL = mongodb+srv://svijayan:MLMGLy8tzaUxo2Bh@cluster0.tis2nxg.mongodb.net/emaily-prod?retryWrites=true&w=majority
+
