--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
+    "passport": "0.5",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
