--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"yarn run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "concurrently": "^7.4.0",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "passport": "0.5",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^10.14.0"
   }
 }
