--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "passport": "0.5",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^10.14.0"
   }
 }
